Sound card Calibration and Measurement added.

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,6 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-Transducers Measurements/Lectures/IMDEA_callibration.py
+Transducers Measurements/Lectures/IMDEA_06_TS_estimation_fit.py
+Transducers Measurements/Lectures/_prepare.py
+Transducers Measurements/Lectures/functions/__pycache__
