removed .ipynb_checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Thumbs.db
 Transducers Measurements/Lectures/IMDEA_06_TS_estimation_fit.py
 Transducers Measurements/Lectures/_prepare.py
 Transducers Measurements/Lectures/functions/__pycache__
+Transducers Measurements/Lectures/.ipynb_checkpoints
