after 2nd lesson

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-Transducers Measurements/Lectures/IMDEA_06_TS_estimation_fit.py
-Transducers Measurements/Lectures/_prepare.py
 Transducers Measurements/Lectures/functions/__pycache__
 Transducers Measurements/Lectures/.ipynb_checkpoints
+Transducers Measurements/Lectures/backup
+.vscode
