--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ __pycache__
 
 # OS generated files #
 ######################
-.Testing
 .DS_Store
 .DS_Store?
 ._*
@@ -20,3 +19,6 @@ __pycache__
 ehthumbs.db
 Thumbs.db
 
+# Testing #
+######################
+_Testing
